Fixed footer on mobile view

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -219,7 +219,7 @@ footer {
     padding-right:320px;
   }
 
-  section {
+  section, footer {
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px 0;
